<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.mobile</groupId>
    <artifactId>ui-automation</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>ui-automation</name>
    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.plugin>3.11.0</maven.compiler.plugin>

        <appium.version>9.3.0</appium.version>
        <selenium.version>4.27.0</selenium.version>
        <junit.version>4.13.2</junit.version>
        <cucumber.version>7.11.1</cucumber.version>
        <lombok.version>1.18.36</lombok.version>
        <log4jcore.version>2.24.3</log4jcore.version>
        <surefire.version>3.1.2</surefire.version>
        <spotbugs.version>4.7.3.5</spotbugs.version>
        <extentreports.version>5.1.2</extentreports.version>
        <extentreports.plugin.version>1.14.0</extentreports.plugin.version>
        <!--Defaults-->
        <parallel.choice>methods</parallel.choice>
        <fork.count>1</fork.count>
        <thread.count>2</thread.count>
    </properties>

    <dependencies>

        <!-- Appium -->
        <dependency>
            <groupId>io.appium</groupId>
            <artifactId>java-client</artifactId>
            <version>${appium.version}</version>
        </dependency>

        <!-- Selenium -->
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>${selenium.version}</version>
        </dependency>

        <!-- JUnit -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
        </dependency>

        <!-- Cucumber -->
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>${cucumber.version}</version>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-junit</artifactId>
            <version>${cucumber.version}</version>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-core</artifactId>
            <version>${cucumber.version}</version>
        </dependency>

        <!-- Lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
        </dependency>

        <!-- Extent Report-->
        <dependency>
            <groupId>com.aventstack</groupId>
            <artifactId>extentreports</artifactId>
            <version>${extentreports.version}</version>
        </dependency>

        <!-- Extent Report Adapter To Cucumber-->
        <dependency>
            <groupId>tech.grasshopper</groupId>
            <artifactId>extentreports-cucumber7-adapter</artifactId>
            <version>${extentreports.plugin.version}</version>
        </dependency>

        <!-- Log -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4jcore.version}</version>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>**/*.properties</include>
                </includes>
            </resource>
        </resources>
        <testResources>
            <testResource>
                <directory>src/test/resources</directory>
                <includes>
                    <include>**/*.properties</include>
                    <include>**/*.feature</include>
                </includes>
            </testResource>
        </testResources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin}</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.source}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire.version}</version>
                <configuration>
                    <parallel>${parallel.choice}</parallel>
                    <forkCount>${fork.count}</forkCount>
                    <reuseForks>true</reuseForks>
                    <threadCount>${thread.count}</threadCount>
                    <useUnlimitedThreads>false</useUnlimitedThreads>
                    <parallelOptimized>true</parallelOptimized>
                    <testFailureIgnore>true</testFailureIgnore>
                    <skipTests>false</skipTests>
                    <includes>
                        <include>**/*Runner.java</include>
                    </includes>
                    <failIfNoTests>false</failIfNoTests>
                    <useModulePath>false</useModulePath>
                    <systemPropertyVariables>
                        <!-- <cucumber.execution.parallel.enabled>${parallel}</cucumber.execution.parallel.enabled>
                         <cucumber.execution.parallel.strategy>fixed</cucumber.execution.parallel.strategy>
                         <cucumber.execution.parallel.config.fixed.parallelism>${threadCount}
                         </cucumber.execution.parallel.config.fixed.parallelism>-->
                    </systemPropertyVariables>
                </configuration>
                <goals>
                    <goal>test</goal>
                </goals>
            </plugin>
        </plugins>
    </build>
</project>
